@@ -1,6 +1,7 @@
 /* For LarKC */
 package com.cyc.tool.subl.util;
 
+import static org.logicmoo.system.Startup.*;
 import java.io.ByteArrayOutputStream;
 import java.io.DataInputStream;
 import java.io.File;
@@ -8,6 +9,7 @@ import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.lang.instrument.Instrumentation;
+import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.net.JarURLConnection;
@@ -15,42 +17,107 @@ import java.net.MalformedURLException;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLClassLoader;
+import java.net.URLConnection;
+import java.security.CodeSource;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Enumeration;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.Map;
+import java.util.Set;
 import java.util.Map.Entry;
+import java.util.concurrent.Callable;
 import java.util.function.Consumer;
 import java.util.jar.Attributes;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
 import java.util.jar.Manifest;
+import java.util.zip.ZipEntry;
+import java.util.zip.ZipInputStream;
 
 import org.armedbear.lisp.JavaClassLoader;
 import org.armedbear.lisp.Lisp;
+import org.armedbear.lisp.Main;
 import org.logicmoo.system.Startup;
 import org.logicmoo.system.SystemCurrent;
 
 import com.cyc.tool.subl.jrtl.nativeCode.subLisp.Errors;
 
 public class IsolatedClassLoader extends URLClassLoader {
+	public static final String BANG_SLASH = "!/";
+	public static boolean suspendAdding = false;
+	public static int debug = 2;
+	public static boolean ALLOW_DYNAMIC_LOADING_OF_CODE = true;
+	public static boolean ALLOW_LOADING_OF_DIRS_FROM_INTERPRETER = false;
+	private static ArrayList<ClassLoader> peerLoaders = new ArrayList();
+	private static boolean shortend;
+	public final static Set<String> _zip_extensions = new HashSet<String>();
+	static {
+		_zip_extensions.add(".jar");
+		_zip_extensions.add(".zip");
+		_zip_extensions.add(".abcl");
+		_zip_extensions.add(".war");
+		// IKVM _zip_extensions.add(".dll");  _zip_extensions.add(".exe");
+
+	}
+	public final static Set<String> _cu_extensions = new HashSet<String>();
+	static {
+		_cu_extensions.add(".class");
+		_cu_extensions.add(".cls");
+		_cu_extensions.add(".java");
+		_cu_extensions.add(".subl");
+		_cu_extensions.add(".lisp");
+		// IKVM _zip_extensions.add(".res");
+	}
 	static ClassLoader parentClassLoader;
 	static URL modpatch1;
 	static {
 		parentClassLoader = IsolatedClassLoader.class.getClassLoader();
 		try {
 			modpatch1 = normalizedFile(new File("lib/java.desktop.modpatch-1.jar")).toURL();
-			String scl = System.getProperty("java.system.class.loader", null);
-			System.out.println("java.system.class.loader=" + scl);
+			if (!Main.noinform) {
+				String lcl = System.getProperty("java.system.class.loader", null);
+				System.out.println("java.system.class.loader=" + lcl);
+			}
 		} catch (Throwable e) {
 			// TODO Auto-generated catch block
-			e.printStackTrace();
+			Startup.printStackTrace(e);
 		}
 		//classDupes(sun.awt.shell.PublicShellFolderManager.class.getName());
 	}
 
-	public static IsolatedClassLoader theIsolatedClassLoader = new IsolatedClassLoader();
+	volatile public static IsolatedClassLoader theIsolatedClassLoader = new IsolatedClassLoader();
+
+	public String toString() {
+		//com.fasterxml.jackson.jaxrs.json.JacksonJsonProvider
+		// javax.ws.rs.ext.MessageBodyReader
+		if (this == theIsolatedClassLoader)
+			return "theIsolatedClassLoader";
+		return super.toString();
+	}
+
+	/**
+	 *
+	 */
+	public void checkForlderOverride() {
+		ClassLoader lcl = getSystemClassLoader();
+		try {
+			Method method = getDeclaredMethod(lcl.getClass(), "loadClass", String.class, boolean.class);
+			method.setAccessible(true);
+			Class psfm1 = parentClassLoader.loadClass("sun.awt.shell.PublicShellFolderManager");
+			Class psfm0 = (Class) method.invoke(lcl, "sun.awt.shell.ShellFolderManager", true);
+			Class psfm2 = loadClass("sun.awt.shell.PublicShellFolderManager", true);
+			if (psfm1 != psfm2) {
+				Thread.dumpStack();
+			}
+			if (psfm0 != psfm2) {
+				Thread.dumpStack();
+			}
+		} catch (Throwable e) {
+			printStackTrace(e);
+		}
+	}
 
 	public IsolatedClassLoader() {
 		super(new URL[0], parentClassLoader);
@@ -60,23 +127,8 @@ public class IsolatedClassLoader extends URLClassLoader {
 		blockedNames = new ArrayList<String>();
 		loadedAlready = new HashMap<String, Class>();
 		if (false) {
-			ClassLoader scl = getSystemClassLoader();
-			try {
-				Method method = getDeclaredMethod(scl.getClass(), "loadClass", String.class, boolean.class);
-				method.setAccessible(true);
-				Class psfm1 = parentClassLoader.loadClass("sun.awt.shell.PublicShellFolderManager");
-				Class psfm0 = (Class) method.invoke(scl, "sun.awt.shell.ShellFolderManager", true);
-				Class psfm2 = loadClass("sun.awt.shell.PublicShellFolderManager", true);
-				if (psfm1 != psfm2) {
-					Thread.dumpStack();
-				}
-				if (psfm0 != psfm2) {
-					Thread.dumpStack();
-				}
-			} catch (Exception e) {
-				// TODO Auto-generated catch block
-				e.printStackTrace();
-			}
+			addURL(modpatch1);
+			checkForlderOverride();
 		}
 	}
 
@@ -89,24 +141,20 @@ public class IsolatedClassLoader extends URLClassLoader {
 			method.setAccessible(true);
 			method.invoke(pcl, modpatch1);
 			System.out.println("parent of java.system.class.loader=" + pcl);
-			System.out.println("parentClassLoader=" + parentClassLoader);
-			final Thread currentThread = Thread.currentThread();
-			System.out.println("getContextClassLoader=" + currentThread.getContextClassLoader());
-			currentThread.setContextClassLoader(this);
-			outerNames = new ArrayList<String>();
-			theIsolatedClassLoader = this;
-			blockedNames = new ArrayList<String>();
-			loadedAlready = new HashMap<String, Class>();
-			addURL(modpatch1);
-			Class psfm0 = loadClass("sun.awt.shell.ShellFolderManager", true);
-			Class psfm2 = loadClass("sun.awt.shell.PublicShellFolderManager", true);
-			Class psfm1 = parentClassLoader.loadClass("sun.awt.shell.PublicShellFolderManager");
-			if (psfm1 != psfm2) {
-				Thread.dumpStack();
-			}
-		} catch (Exception e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
+		} catch (IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException e) {
+			printStackTrace(e);
+		}
+		System.out.println("parentClassLoader=" + parentClassLoader);
+		final Thread currentThread = Thread.currentThread();
+		System.out.println("getContextClassLoader=" + currentThread.getContextClassLoader());
+		currentThread.setContextClassLoader(this);
+		outerNames = new ArrayList<String>();
+		theIsolatedClassLoader = this;
+		blockedNames = new ArrayList<String>();
+		loadedAlready = new HashMap<String, Class>();
+		addURL(modpatch1);
+		if (false) {
+			checkForlderOverride();
 		}
 	}
 
@@ -118,74 +166,52 @@ public class IsolatedClassLoader extends URLClassLoader {
 	}
 
 	static String[] larkcDefaultJarFiles = new String[] { //
-			"./lib/jetty-libs/",
+			//"./lib/jetty-libs/*.jar",
+			//	"./lib/jsp/*.jar", "./lib/jetty-libs/*.jar",
 			//"./lib/jetty-libs/*v20190813.jar",
-			"./lib/larkc/*.jar", //
-			// "./lib/jetty-libs/*.jar",
-			"./lib/*.jar" };
+			//"./lib/larkc/*.jar", //
+			"./lib/all-deps/", //
+			//"./lib/*.jar"
+	};
 
-	public static void addDefaultJarsToClassPath(String LARKC_HOME) {
+	static public void addDefaultJarsToClassPath(String LARKC_HOME) {
 		ArrayList<File> al = new ArrayList();
 		Consumer<File> foo = new Consumer<File>() {
 
 			@Override
 			public void accept(File t) {
 				t = normalizedFile(t);
-				if (!al.contains(t))
-					al.add(t);
+				if (!isSkipped(t)) {
+					if (!al.contains(t))
+						al.add(t);
+				}
 			}
 		};
 		for (String s : larkcDefaultJarFiles) {
+			final File file = new File(s);
+			if (file.isDirectory()) {
+				addCommonClassPath(file);
+				continue;
+			}
 			if (false && s.startsWith(".")) {
-				if (!new File(s).exists()) {
+				if (!file.exists()) {
 					s = LARKC_HOME + s.substring(1);
 				}
 			}
+
 			try {
 				if (s.contains("*")) {
 
 					new FileFinder(s, false, foo).doFiles();
 				} else
-					foo.accept(normalizedFile(new File(s)));
+					foo.accept(normalizedFile(file));
 			} catch (IOException e) {
 				// TODO Auto-generated catch block
-				e.printStackTrace();
+				printStackTrace(e);
 			}
 		}
 		for (File f : al) {
-			addClassPath(f);
-		}
-	}
-
-	public static boolean addClassPath(File f) {
-		ClassLoader cl = getSystemClassLoader();
-		f = normalizedFile(f);
-		try {
-
-			// If Java 9 or higher use Instrumentation
-			if (!(cl instanceof URLClassLoader)) {
-				if (inst == null) {
-					inst = getInstrumentation();
-				}
-				inst.appendToSystemClassLoaderSearch(new JarFile(f));
-				return true;
-			}
-			final URL url = normalizedURL(f.toURI().toURL());
-			if (containsURL(cl, url))
-				return true;
-
-			final String urlString = url.toString();
-			if (urlString.contains("/javagat/")) {
-				Errors.warn("adding? " + urlString);
-			}
-			if (f.isDirectory()) {
-
-			}
-			addURL(cl, url);
-			return true;
-		} catch (Throwable e) {
-			e.printStackTrace();
-			return false;
+			addCommonClassPath(f);
 		}
 	}
 
@@ -199,20 +225,20 @@ public class IsolatedClassLoader extends URLClassLoader {
 		return inst;
 	}
 
-	public static void addClassPath(URL u) throws IOException {
-		final ClassLoader pcl = getIsolatedParent();
-		addURL(pcl, u);
-	}
+	//	public void addClassPath(URL u) throws IOException {
+	//		//final ClassLoader pcl = getIsolatedParent();
+	//		addURL(u);
+	//	}
 
-	public static ClassLoader asURLClassLoader(ClassLoader o, boolean traceSearch) throws IOException {
+	public static ClassLoader asURLClassLoader(ClassLoader lcl, boolean traceSearch) throws IOException {
 
-		if (o instanceof URLClassLoader)
-			return o;
+		if (lcl instanceof URLClassLoader)
+			return lcl;
 
-		println("Classloader is not a URLClassLoader: " + o);
+		println("Classloader is not a URLClassLoader: " + lcl);
 		ClassLoader classLoader = null;
-		if (o != null) {
-			classLoader = o.getParent();
+		if (lcl != null) {
+			classLoader = lcl.getParent();
 			if (traceSearch)
 				println("Checking Parent Classloader: " + classLoader);
 			if (classLoader instanceof URLClassLoader) {
@@ -272,40 +298,64 @@ public class IsolatedClassLoader extends URLClassLoader {
 
 	/**
 	 * TODO Describe the purpose of this method.
-	 * 
+	 *
 	 * @param u
 	 * @throws IOException
 	 */
-	public static ClassLoader addURL(ClassLoader o, URL url) throws IOException {
+	public static ClassLoader addURLToClassloader(String why, ClassLoader lcl, URL url) throws IOException {
 		url = normalizedURL(url);
-		if (!(o instanceof URLClassLoader)) {
-			println("Classloader is not a URLClassLoader: " + o);
+		if (isSkipped(url)) {
+			println(why + ": isSkipped! " + url + " to " + lcl);
+			return lcl;
+		}
+		if (!(lcl instanceof URLClassLoader)) {
+			println("Classloader is not a URLClassLoader: " + lcl);
 			{
-				ClassLoader extClassLoader = asURLClassLoader(o, true);
+				ClassLoader extClassLoader = asURLClassLoader(lcl, true);
 				if (extClassLoader instanceof URLClassLoader) {
-					return addURL(extClassLoader, url);
+					return addURLToClassloader(why, extClassLoader, url);
 				}
 				println("asURLClassLoader is not a URLClassLoader: " + extClassLoader);
 			}
 		}
-		URL[] urls = Lisp.getURLs(o);
-		for (int i = 0; i < urls.length; ++i) {
-			if (urls[i].toString().equalsIgnoreCase(url.toString()))
-				return o;
+		if (containsURL(lcl, url)) {
+			if (debug > 2) {
+				println(why + ": " + " " + url + " to " + lcl);
+			} else if (debug > 2 && shortend) {
+				println(why + ": SHORTEND ALREADY " + url + " to " + lcl);
+
+			}
+			return lcl;
+		}
+		if (suspendAdding)
+
+		{
+			if (debug > 0) {
+				println(why + ": Suspended Adding " + url + " to " + lcl);
+			}
+			return lcl;
 		}
 		try {
-			Method method = getDeclaredMethod(o.getClass(), "addURL", URL.class);
+			Method method = getDeclaredMethod(lcl.getClass(), "addURL", URL.class);
 			method.setAccessible(true);
-			if (debug > 1)
-				println("Add " + url + " to " + o);
-			method.invoke(o, url);
-			return o;
+			if (debug > 1) {
+				if (!(lcl instanceof IsolatedClassLoader))
+					println(why + ": Adding " + url + " to " + lcl);
+			}
+			method.invoke(lcl, url);
+			return lcl;
 		} catch (NoSuchMethodException e) {
-			new IOException("No URL classloader", e).printStackTrace();
-			return o;
+			printStackTrace(e);
+			new IOException("No URL (addURL) classloader", e).printStackTrace();
+			return lcl;
 		} catch (Throwable t) {
 			throw new IOException("Error, could not add URL to system classloader", t);
 		}
+	}
+
+	private static boolean isSkipped(Object url) {
+		String str = "" + url;
+		return str.contains("~");
 	}
 
 	/**
@@ -334,6 +384,24 @@ public class IsolatedClassLoader extends URLClassLoader {
 
 	}
 
+	public static Field getDeclaredField(Class sysclass, String name) throws NoSuchFieldException, SecurityException {
+		try {
+			return sysclass.getDeclaredField(name);
+		} catch (NoSuchFieldException poe) {
+			Class superClass = sysclass.getSuperclass();
+			while (superClass != null && superClass != Object.class && superClass != sysclass) {
+				sysclass = superClass;
+				try {
+					return sysclass.getDeclaredField(name);
+				} catch (NoSuchFieldException e) {
+					superClass = sysclass.getSuperclass();
+					continue;
+				}
+			}
+			throw poe;
+		}
+	}
+
 	public static String slashify(String path, boolean isDirectory) {
 		String p = path;
 		if (File.separatorChar != '/')
@@ -348,10 +416,6 @@ public class IsolatedClassLoader extends URLClassLoader {
 	ArrayList<String> outerNames;
 	ArrayList<String> blockedNames;
 	Map<String, Class> loadedAlready;
-	static int debug = 1;
-	public static boolean ALLOW_DYNAMIC_LOADING_OF_CODE = true;
-	public static boolean ALLOW_LOADING_OF_DIRS_FROM_INTERPRETER = false;
-	private static ArrayList<ClassLoader> peerLoaders = new ArrayList();
 
 	private Class loadClassFile(File jfile) throws IOException {
 		String sfile = jfile.getAbsolutePath();
@@ -373,10 +437,10 @@ public class IsolatedClassLoader extends URLClassLoader {
 		return c;
 	}
 
-	private void scanFiles(File jfile, boolean defineClasses, boolean decendDirs) {
+	private void scanFiles(ClassLoader lcl, File jfile, boolean defineClasses, boolean decendDirs) {
 		if (jfile.isFile()) {
 			String s = jfile.getAbsolutePath();
-			if (s.endsWith(".class")) {
+			if (isCompilationUnit(s)) {
 				try {
 					if (defineClasses)
 						addClassFile(jfile);
@@ -385,9 +449,9 @@ public class IsolatedClassLoader extends URLClassLoader {
 				}
 				return;
 			}
-			if (s.endsWith(".jar")) {
+			if (isZip(s)) {
 				try {
-					addJar(jfile);
+					addJar(lcl, jfile, defineClasses);
 				} catch (IOException e2) {
 					Errors.error("Error while loading inner classes for: " + jfile, e2);
 				}
@@ -397,7 +461,7 @@ public class IsolatedClassLoader extends URLClassLoader {
 		if (jfile.isDirectory() && decendDirs) {
 			File[] jfiles = jfile.listFiles();
 			for (int i = 0; i < jfiles.length; ++i)
-				scanFiles(jfiles[i], defineClasses, decendDirs);
+				scanFiles(lcl, jfiles[i], defineClasses, decendDirs);
 		}
 	}
 
@@ -427,47 +491,97 @@ public class IsolatedClassLoader extends URLClassLoader {
 		return c;
 	}
 
-	static public void addToClassPath(String stringTyped) {
+	static public void addCommonClassPath(String stringTyped) {
+		ClassLoader lcl = getSystemClassLoader();
+		theIsolatedClassLoader.addCode(lcl, stringTyped, false);
+	}
+
+	static public void addCommonClassPath(URL stringTyped) {
+		try {
+			addURLToClassloader("addCommonClassPath", theIsolatedClassLoader, stringTyped);
+		} catch (IOException e) {
+			printStackTrace(e);
+		}
+	}
+
+	public static boolean addCommonClassPath(File f) {
+		ClassLoader lcl = getSystemClassLoader();
+		f = normalizedFile(f);
+		try {
+
+			// If Java 9 or higher use Instrumentation
+			if (!(lcl instanceof URLClassLoader)) {
+				if (inst == null) {
+					inst = getInstrumentation();
+				}
+				inst.appendToSystemClassLoaderSearch(new JarFile(f));
+				return true;
+			}
+			final URL url = normalizedURL(f.toURI().toURL());
+			final String urlString = url.toString();
+			if (urlString.contains("/javagat/")) {
+				Errors.warn("adding? " + urlString);
+			}
+			if (!f.isDirectory()) {
+				if (containsURL(lcl, f.toURI().toURL())) {
+					String why = "addCommonClassPath";
+					if (debug > 2) {
+						println(why + ": ALREADY " + url + " to " + lcl);
+					} else if (debug > 2 && shortend) {
+						println(why + ": SHORTEND ALREADY " + url + " to " + lcl);
+
+					}
+					return true;
+				}
+			}
+			addURLToClassloader("addCommonClassPath", lcl, url);
+			return true;
+		} catch (Throwable e) {
+			printStackTrace(e);
+			return false;
+		}
+	}
+
+	public void addCode(ClassLoader lcl, String stringTyped, boolean loadNow) {
 		stringTyped = org.logicmoo.system.Startup.unquote(stringTyped);
 		if (stringTyped.contains(";")) {
 			for (String s : stringTyped.split(";")) {
-				theIsolatedClassLoader.addCode(s);
+				addCode(lcl, s, loadNow);
 			}
 			return;
 		}
 		int indexOf = stringTyped.indexOf(":");
 		if (indexOf > 6) {
 			for (String s : stringTyped.split(":")) {
-				theIsolatedClassLoader.addCode(s);
+				addCode(lcl, s, loadNow);
 			}
 			return;
 		}
-		theIsolatedClassLoader.addCode(stringTyped);
-	}
-
-	public void addCode(String stringTyped) {
-
 		stringTyped = org.logicmoo.system.Startup.unquote(stringTyped);
 		URL url;
-		if (stringTyped.startsWith("file:")) {
+		do_more: do {
+			if (stringTyped.startsWith("file:")) {
 
-			try {
-				url = new URL(stringTyped);
-				stringTyped = url.getFile();
-			} catch (MalformedURLException e) {
-				e.printStackTrace();
+				try {
+					url = new URL(stringTyped);
+					stringTyped = url.getFile();
+					continue do_more;
+				} catch (MalformedURLException e) {
+					printStackTrace(e);
+				}
+
+			} else if (stringTyped.startsWith("jar:")) {
+				try {
+					url = new URL(stringTyped);
+					stringTyped = url.getFile();
+					continue do_more;
+				} catch (MalformedURLException e) {
+					// TODO Auto-generated catch block
+					printStackTrace(e);
+				}
 			}
 
-		} else if (stringTyped.startsWith("jar:")) {
-			try {
-				url = new URL(stringTyped);
-				stringTyped = url.getFile();
-			} catch (MalformedURLException e) {
-				// TODO Auto-generated catch block
-				e.printStackTrace();
-			}
-
-		}
+		} while (false);
 
 		File jfile = normalizedFile(new File(stringTyped));
 
@@ -478,20 +592,20 @@ public class IsolatedClassLoader extends URLClassLoader {
 				try {
 					jfile = normalizedFile(new File(stringTyped.substring(0, jarChars + 3)));
 					String className = stringTyped.substring(jarChars + 4);
-					addJarClass(jfile, className);
+					addJarClass(lcl, jfile, className);
 					return;
 				} catch (Throwable e) {
 					Errors.error("Error loading jar!class: " + stringTyped, e);
 				}
 		}
 		if (jfile.exists()) {
-			if (stringTyped.endsWith(".jar"))
+			if (isZip(stringTyped))
 				try {
-					addJar(jfile);
+					addJar(lcl, jfile, loadNow);
 				} catch (Throwable e2) {
 					Errors.error("Error accessing jar: " + stringTyped, e2);
 				}
-			else if (stringTyped.endsWith(".class"))
+			else if (isCompilationUnit(stringTyped))
 				try {
 					addClassFile(jfile);
 				} catch (Throwable e3) {
@@ -499,7 +613,7 @@ public class IsolatedClassLoader extends URLClassLoader {
 				}
 			else if (jfile.isDirectory()) {
 				try {
-					addURL(jfile.toURI().toURL());
+					addURLToClassloader("AddCode", lcl, jfile.toURI().toURL());
 				} catch (Throwable e2) {
 					Errors.error("Unable to load directory into classpath: " + jfile);
 				}
@@ -537,6 +651,18 @@ public class IsolatedClassLoader extends URLClassLoader {
 	 * @throws URISyntaxException
 	 */
 	public static URL normalizedURL(URL url) {
+		String s = url.toString();
+		if (s.startsWith("jar:")) {
+			try {
+				String s2 = url.getPath();
+				if (s2.endsWith(BANG_SLASH)) {
+					s2 = s2.substring(0, s.length() - 2);
+				}
+				url = new URL(s2);
+			} catch (MalformedURLException e) {
+				printStackTrace(e);
+			}
+		}
 		try {
 			return url.toURI().toURL();
 		} catch (MalformedURLException | URISyntaxException e) {
@@ -544,7 +670,7 @@ public class IsolatedClassLoader extends URLClassLoader {
 		}
 	}
 
-	public void addDirectory(File jfile) throws IOException {
+	public void addDirectory(ClassLoader lcl, File jfile) throws IOException {
 		jfile = normalizedFile(jfile);
 		final String extracted = slashify(jfile.getAbsolutePath(), false);
 		final URL withHost = new URL("file", "", extracted);
@@ -552,50 +678,102 @@ public class IsolatedClassLoader extends URLClassLoader {
 		addURL(url);
 		File[] jfiles = jfile.listFiles();
 		for (int i = 0; i < jfiles.length; ++i)
-			scanFiles(jfiles[i], false, true);
+			scanFiles(lcl, jfiles[i], false, true);
 	}
 
-	public void addJar(File jfile) throws IOException {
+	public void addJar(ClassLoader lcl, File jfile, boolean loadNow) throws IOException {
 		jfile = normalizedFile(jfile);
-		URL url = normalizedURL(new URL("jar:file://" + jfile.getAbsolutePath() + "!/"));
+		final URL url = jfile.toURI().toURL();
+		ArrayList<String> classFileList = new ArrayList<String>();
 		addURL(url);
+		if (!loadNow)
+			return;
+		//CodeSource src =  getProtectionDomain().getCodeSource();
+		//if (src != null) {
+		ZipInputStream zip = new ZipInputStream(url.openStream());
+		while (true) {
+			ZipEntry e = zip.getNextEntry();
+			if (e == null)
+				break;
+			String name = e.getName();
+			if (name != null) {
+				classFileList.add(name);
+			}
+		}
+		zip.close();
+		for (String n : classFileList) {
+			if (n.endsWith("/"))
+				continue;
+			if (isCompilationUnit(n)) {
+				if (loadNow) {
+					addJarClass(lcl, jfile, classNameFromFile(n));
+				}
+			}
+		}
 	}
 
-	public void addJarClass(File jfile, String className) throws IOException {
+	/**
+	 * @param name
+	 */
+	static public String classNameFromFile(String name) {
+		String cn = name;
+		if (isCompilationUnit(name)) {
+			cn = baseName(name);
+		}
+		cn = cn.replace('/', '.').replace('-', '_').replace('$', '.');
+		return cn;
+	}
 
+	public void addJarClass(ClassLoader lcl, File jfile, String className) throws IOException {
 		try {
-			String classfileName = className.replace('.', File.separatorChar) + ".class";
+			//
 			jfile = normalizedFile(jfile);
-			// Create a URL that refers to a jar file in the file system 
-			URL FileSysUrl = normalizedURL(new URL("jar:file://" + jfile.getAbsolutePath() + "!/" + classfileName));
+			// Create a URL that refers to a jar file in the file system
+			addJarClass(lcl, jarFileClassURL(jfile, className), className);
+		} catch (MalformedURLException e) {
+			printStackTrace(e);
+		} catch (IOException e) {
+			printStackTrace(e);
+		} catch (ClassFormatError e) {
+			printStackTrace(e);
+		} catch (Error e) {
+			printStackTrace(e);
+		} catch (Throwable e) {
+			printStackTrace(e);
+		}
+		return;
+	}
 
-			// Create a jar URL connection object 
+	public void addJarClass(ClassLoader lcl, URL FileSysUrl, String className) throws IOException {
+		try {
+
+			// Create a jar URL connection object
 			JarURLConnection jarURLConn = (JarURLConnection) FileSysUrl.openConnection();
 
-			if (false) {
-				// getJarFileURL() method 
+			if (debug > 1) {
+				// getJarFileURL() method
 				println("Jar file URL : " + jarURLConn.getJarFileURL());
 
-				// getEntryName() method 
+				// getEntryName() method
 				println("Entry Name : " + jarURLConn.getEntryName());
 
-				// getJarFile() method 
+				// getJarFile() method
 				JarFile jarFile = jarURLConn.getJarFile();
 				println("Jar Entry: " + jarURLConn.getJarEntry());
 
-				// getManifest() method 
+				// getManifest() method
 				Manifest manifest = jarFile.getManifest();
 				println("Manifest :" + manifest.toString());
 
-				// getJarEntry() method 
+				// getJarEntry() method
 				JarEntry jentry = jarURLConn.getJarEntry();
 				println("Jar Entry : " + jentry.toString());
 
-				// getAttributes() method 
+				// getAttributes() method
 				Attributes attr = jarURLConn.getAttributes();
 				println("Attributes : " + attr);
 
-				// getMainAttributes() method 
+				// getMainAttributes() method
 				Attributes attrmain = jarURLConn.getMainAttributes();
 				println("\nMain Attributes details: ");
 
@@ -603,27 +781,53 @@ public class IsolatedClassLoader extends URLClassLoader {
 					println(e.getKey() + " " + e.getValue());
 				}
 
-				// getCertificates() method 
+				// getCertificates() method
 				java.security.cert.Certificate cert[] = jarURLConn.getCertificates();
 				println("\nCertificates Info :" + Arrays.toString(cert));
 			}
 			InputStream is = jarURLConn.getInputStream();
 			byte[] byteArray = toByteArray(is);
 			Class c = defineClass(null, byteArray, 0, byteArray.length);
+			if (className == null) {
+				className = c.getName();
+			}
 			loadedAlready.put(className, c);
 		} catch (MalformedURLException e) {
-			e.printStackTrace();
+			printStackTrace(e);
 		} catch (IOException e) {
-			e.printStackTrace();
+			printStackTrace(e);
 		} catch (ClassFormatError e) {
-			e.printStackTrace();
+			printStackTrace(e);
 		} catch (Error e) {
-			e.printStackTrace();
+			printStackTrace(e);
 		} catch (Throwable e) {
-			e.printStackTrace();
+			printStackTrace(e);
 		}
 		return;
 
+	}
+
+	/**
+	 * @param jfile
+	 * @param classfileName
+	 * @return
+	 * @throws MalformedURLException
+	 */
+	public URL jarFileClassURL(File jfile, String className) throws MalformedURLException {
+		jfile = normalizedFile(jfile);
+		String classfileName = className.replace('.', File.separatorChar);
+		if (classfileName.length() > 0) {
+			classfileName += ".class";
+		} else {
+			final URL withHost = jfile.toURI().toURL();
+
+			URL url = normalizedURL(withHost);
+			final String extracted = slashify(jfile.getAbsolutePath(), false);
+			//final URL withHost = new URL("file", "", extracted);
+
+			return url;
+		}
+		return new URL("jar:file://" + jfile.getAbsolutePath() + BANG_SLASH + classfileName);
 	}
 
 	/**
@@ -631,6 +835,8 @@ public class IsolatedClassLoader extends URLClassLoader {
 	 * @param string
 	 */
 	static void println(String s) {
+		s = "" + s;
+		s = s.replace("G:/opt/CYC_JRTL_with_CommonLisp/platform", "$PLATFORM");
 		Startup.getNoticeStream().println(s);
 	}
 
@@ -655,14 +861,45 @@ public class IsolatedClassLoader extends URLClassLoader {
 
 	@Override
 	public void addURL(URL url) {
+		Object lcl = this;
+		String why = "AddUrl";
 		url = normalizedURL(url);
-		if (containsURL(this, url))
+		if (containsURL(this, url)) {
+			if (debug > 2) {
+				println(why + ": ALREADY " + url + " to " + lcl);
+			} else if (debug > 1 && shortend) {
+				println(why + ": SHORTEND ALREADY " + url + " to " + lcl);
+			}
 			return;
-		if (safeToGetSystemClassLaoder) {
-			if (containsURL(getParent(), url))
-				return;
 		}
-		println("Add " + url + " to " + this);
+		if (safeToGetSystemClassLaoder) {
+			ClassLoader parent = getParent();
+			if (containsURL(parent, url)) {
+				if (debug > 0) {
+					println(why + ": ALREADY PARENT " + url + " to " + parent);
+				}
+				return;
+			}
+			if (parent != parentClassLoader) {
+				if (containsURL(parentClassLoader, url)) {
+					if (debug > 0) {
+						println(why + ": ALREADY parentClassLoader " + url + " to " + parentClassLoader);
+					}
+					return;
+				}
+			}
+			ClassLoader sscl = getSystemClassLoader();
+			if (lcl != parentClassLoader) {
+				if (containsURL(sscl, url)) {
+					if (debug > 0) {
+						println(why + ": ALREADY getSystemClassLoader " + url + " to " + sscl);
+					}
+					return;
+				}
+			}
+		}
+		if (debug > 1)
+			println(why + ": ADDING " + url + " to " + lcl);
 		super.addURL(url);
 	}
 
@@ -670,13 +907,106 @@ public class IsolatedClassLoader extends URLClassLoader {
 	 * TODO Describe the purpose of this method.
 	 * @param url
 	 */
-	public static boolean containsURL(ClassLoader cl, URL url) {
-		if (!(cl instanceof URLClassLoader))
+	public static boolean containsURL(ClassLoader lcl, URL url) {
+		if (lcl == null)
 			return false;
-		String urlstr = normalizedURL(url).toString();
-		for (URL url0 : ((URLClassLoader) cl).getURLs()) {
-			if (urlstr.equalsIgnoreCase(normalizedURL(url0).toString()))
-				return true;
+		shortend = false;
+		String urlstr = getUrlShortPath(url);
+		boolean was = shortend;
+		try {
+			return containsURL(lcl, urlstr);
+		} finally {
+			if (was)
+				shortend = true;
+		}
+	}
+
+	public static boolean containsURL(ClassLoader lcl, String urlstr) {
+		shortend = false;
+
+		if ((lcl instanceof URLClassLoader)) {
+			for (URL url : ((URLClassLoader) lcl).getURLs()) {
+				final String string = getUrlShortPath(url);
+				if (string.endsWith(urlstr))
+					return true;
+			}
+		}
+		final ClassLoader parent = lcl.getParent();
+		if (parent == null)
+			return false;
+		return containsURL(parent, urlstr);
+	}
+
+	private static String getUrlShortPath(URL url) {
+		url = normalizedURL(url);
+		String urlPath = url.getPath();
+		urlPath = slashify(urlPath, false);
+		File jfile = normalizedFile(new File(urlPath));
+		if (jfile.isDirectory()) {
+			urlPath = slashify(jfile.getAbsolutePath(), true);
+		} else {
+			if (jfile.isFile()) {
+				urlPath = slashify(jfile.getAbsolutePath(), false);
+				urlPath = jfile.getName();
+			} else {
+				urlPath = slashify(urlPath, false);
+			}
+			if (isZip(urlPath)) {
+				urlPath = baseName(urlPath);
+			}
+		}
+		//if (true)
+		//return urlPath;
+
+		final String urlPathI = urlPath;
+		int last = urlPath.lastIndexOf("-");
+		String ro = urlPath.substring(last + 1);
+		final boolean hyphen = last > 0 && !ro.contains("/");
+		if (hyphen) {
+			//			urlPath = urlPath.substring(0, last);
+			urlPath = urlPath.replaceAll("[.][v0-9]+", "");
+			urlPath = urlPath.replaceAll("[0-9]+[-]", "");
+		}
+
+		if (!urlPathI.equals(urlPath)) {
+			shortend = true;
+			if (debug > 2) {
+				println("getUrlShortPath: `" + urlPath + "` from " + urlPathI);
+			}
+		}
+		return urlPath;
+	}
+
+	/**
+	 * @param urlPath
+	 * @return
+	 */
+	public static String baseName(String urlPath) {
+		int last = urlPath.lastIndexOf('.');
+		if (last > 1) {
+			return urlPath.substring(0, last);
+		}
+		return urlPath;
+	}
+
+	/**
+	 * @param urlPath
+	 * @return
+	 */
+	public static boolean isZip(String urlPath) {
+		int last = urlPath.lastIndexOf('.');
+		if (last > 1) {
+			String ro = urlPath.substring(last).toLowerCase();
+			return _zip_extensions.contains(ro);
+		}
+		return false;
+	}
+
+	public static boolean isCompilationUnit(String urlPath) {
+		int last = urlPath.lastIndexOf('.');
+		if (last > 1) {
+			String ro = urlPath.substring(last + 1).toLowerCase();
+			return _cu_extensions.contains(ro);
 		}
 		return false;
 	}
@@ -725,7 +1055,7 @@ public class IsolatedClassLoader extends URLClassLoader {
 				} catch (ClassNotFoundException e) {
 					ex = e;
 				}
-			if (debug > 1)
+			if (debug > 2)
 				println("local Loading: " + className);
 			if (c == null)
 				try {
@@ -960,9 +1290,8 @@ public class IsolatedClassLoader extends URLClassLoader {
 	 * @since  1.1
 	 */
 	public final Class<?> maybeFindLoadedClass(String name) {
-		if (name.endsWith(".class")) {
-			String cn = name.substring(0, name.length() - 7);
-			cn = cn.replace('/', '.').replace('$', '.');
+		if (isCompilationUnit(name)) {
+			name = classNameFromFile(name);
 			Class c = loadedAlready.get(name);
 			if (c != null)
 				return c;
@@ -974,10 +1303,10 @@ public class IsolatedClassLoader extends URLClassLoader {
 	 * TODO Describe the purpose of this method.
 	 * @return
 	 */
-	public static ClassLoader getCommonClassLoader() {
-		ClassLoader cl = IsolatedClassLoader.theIsolatedClassLoader;
-		//assert cl == Thread.currentThread().getContextClassLoader();
-		return cl;
+	public static IsolatedClassLoader getCommonClassLoader() {
+		IsolatedClassLoader lcl = IsolatedClassLoader.theIsolatedClassLoader;
+		//assert lcl == Thread.currentThread().getContextClassLoader();
+		return lcl;
 	}
 
 	/**
@@ -989,19 +1318,20 @@ public class IsolatedClassLoader extends URLClassLoader {
 		String classAsResource = name.replace('.', '/') + ".class";
 		//printf("Looking for: %s%n", classAsResource);
 		int found = 0;
-		ClassLoader cl = IsolatedClassLoader.getCommonClassLoader();
-		Enumeration<URL> urls = cl.getResources(classAsResource);
+		ClassLoader lcl = IsolatedClassLoader.getCommonClassLoader();
+		Enumeration<URL> urls = lcl.getResources(classAsResource);
 		while (urls.hasMoreElements()) {
 			found++;
 			URL url = urls.nextElement();
-			//printf("Found: %s%n", url.toExternalForm());
+			if (debug > 1)
+				printf("Found: %s%n", url.toExternalForm());
 		}
 		if (found == 0) {
 			printf(" MISSING!: %s%n", name);
 		} else if (found != 1) {
 			printf(" DUPERS(%d): %s%n", found, name);
 
-			urls = cl.getResources(classAsResource);
+			urls = lcl.getResources(classAsResource);
 			while (urls.hasMoreElements()) {
 				URL url = urls.nextElement();
 				printf(" DUPE!: %s%n", url.toExternalForm());
@@ -1034,9 +1364,14 @@ public class IsolatedClassLoader extends URLClassLoader {
 	 * @throws IOException
 	 */
 	public static void configChecks() throws IOException {
-		printf("CLASSPATH=%s%n", System.getProperty("java.class.path"));
+		if (!Main.noinform) {
+			printf("CLASSPATH=%s%n", System.getProperty("java.class.path"));
+		}
 
+		if (true)
+			return;
 		classDupes("org.apache.xerces.jaxp.SAXParserFactoryImpl");
+		classDupes("com.cyc.library.webserviceutil.util.XMLWebService");
 
 		classDupes("org.slf4j.spi.LocationAwareLogger");
 		classDupes("org.slf4j.LoggerFactory");
@@ -1060,7 +1395,7 @@ public class IsolatedClassLoader extends URLClassLoader {
 		//			//org.apache.tomcat.util.security.MD5Encoder.class.getConstructor().setAccessible(true);
 		//		} catch (SecurityException | NoSuchMethodException e) {
 		//			// TODO Auto-generated catch block
-		//			e.printStackTrace();
+		//			printStackTrace(e);
 		//		}
 		//classDupes(com.sun.jersey.spi.scanning.AnnotationScannerListener.class);
 	}
